# XML_PodParser

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python_app.yml
src/: StrategyParserXML.py  main.py
src/StrategyParserXML/: Strategy.py  StrategyParserXML.py  main.py
src/StrategyParserXML/xml_files/: generated_sample.xml
tests/: es.py  test_StrategyParserXML.py  xmlSampleGenerator.py
