[build-system]
requires       = ["setuptools>=61.0.0", "wheel"]
build-backend  = "setuptools.build_meta"

[project]
name = "XML_PODPARSER"
version = "1.0.0"
description = "A simple xml parser that works on filtering xml files that contain pods measurements. "
readme = "README.md"
authors = [{ name = "Alessandro Mendicino"}]
license = { file = "LICENSE" }
dependencies = [
    "Faker==20.1.0",
    "flake8==6.1.0",
    "jproperties==2.1.1",
    "mccabe==0.7.0",
    "pycodestyle==2.11.1",
    "pyflakes==3.1.0",
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
Homepage = "https://github.com/AlessandroMendicino/XML_PodParser.git "